# jira-proofs

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-03-10-jira-proofs.md
docs/superpowers/specs/: 2026-03-10-jira-proofs-design.md
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: tray-icon-recording.rgba  tray-icon.rgba
src-tauri/src/: capture.rs  commands.rs  config.rs  deps.rs  jira.rs  lib.rs  main.rs  notifications.rs  r2.rs  tray.rs
src-tauri/tests/: capture_test.rs  config_test.rs  deps_test.rs  jira_test.rs  r2_test.rs
src/lib/: CardPicker.svelte  PreviewPopup.svelte  Settings.svelte
