[package]
name = "app"
version = "0.1.0"
description = "Capture screenshots/recordings, upload to R2, post evidence to Jira Cloud"
authors = ["Indra Gunanda <indra.gunanda@gmail.com>"]
license = "MIT"
repository = "https://github.com/cds-id/jira-proofs"
homepage = "https://ciptadusa.com"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
aws-sdk-s3 = "1"
aws-config = "1"
aws-credential-types = "1"
chrono = "0.4"
dirs = "5"
base64 = "0.22"
libc = "0.2"
